# billing_admin

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  nginx.Dockerfile  pyproject.toml
billing/: admin.py  models.py
billing/migrations/: 0001_initial.py
billing_admin/: asgi.py  settings.py  urls.py  wsgi.py
delegation/: admin.py  models.py
delegation/migrations/: 0001_initial.py
guidelines/: admin.py  apps.py
guidelines/migrations/: 0001_initial.py
guidelines/models/: __init__.py  tables.py
proxy/: nginx.dev.conf  start-nginx.sh
