[tool.poetry]
name = "billing-admin"
version = "0.1.0"
description = ""
authors = ["Daniil Bairachnyi <daniil_bairachny@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
